# parallel-grep-mpi

./: CMakeLists.txt  README.md  grep.cpp  grep.h  input.txt  main.cpp  output.txt
